# fmtp-rs

./: Cargo.toml  README.md  flake.nix
crates/fmtp-core/: Cargo.toml
crates/fmtp-core/src/: config.rs  connection.rs  event.rs  identifier.rs  lib.rs  message.rs  packet.rs
crates/fmtp-http/: Cargo.toml
crates/fmtp-http/src/: main.rs
crates/fmtp-tokio/: Cargo.toml
crates/fmtp-tokio/examples/: client.rs  daemon.rs  server.rs
crates/fmtp-tokio/src/: connection.rs  daemon.rs  lib.rs  server.rs
