[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
cargo = { level = "allow", priority = -1 }
perf = { level = "warn", priority = -1 }

missing_errors_doc = "warn"
missing_panics_doc = "warn"

let-underscore-must-use = "warn"
print_stderr = "warn"
print_stdout = "warn"

# prefer expect to allow
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

string_to_string = "warn"

undocumented_unsafe_blocks = "warn"

too_long_first_doc_paragraph = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn" }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
