[package]
name = "fmtp-http"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
fmtp-core = { path = "../fmtp-core" }
fmtp-tokio = { path = "../fmtp-tokio" }

axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

[lints]
workspace = true
